--- a/sema_member/templates/base.html
+++ b/sema_member/templates/base.html
@@ -30,7 +30,7 @@
   <a class="item" href="/login/">訪客請先登入</a>
      {% else %}
   <a class="item" href="/database/"><i class="database icon"></i>資料庫</a>
-         <a class="item" href="/index2/"><i class="database icon"></i>聊天室</a>
+         <a class="item" href="/chatroom/"><i class="comment icon"></i>聊天室</a>
      {% endif %}
 
   <a class="item" href="/"><i class="home icon"></i>回首頁</a>
