--- a/sema_member/templates/base.html
+++ b/sema_member/templates/base.html
@@ -28,11 +28,12 @@
 {# <div class="ui thin sidebar inverted vertical menu " >#}
      {% if username == "訪客" %}
   <a class="item" href="/login/">訪客請先登入</a>
+
      {% else %}
   <a class="item" href="/database/"><i class="database icon"></i>資料庫</a>
          <a class="item" href="/chatroom/"><i class="comment icon"></i>聊天室</a>
      {% endif %}
-
+<a class="item" href="/champ/">英雄資料demo</a>
   <a class="item" href="/"><i class="home icon"></i>回首頁</a>
 </div>
 
